# grid-tensor

./: .gitmodules  CMakeLists.txt  README.md  memory-management.txt
cmake/: FindCCCL.cmake  utils.cmake
models/: CMakeLists.txt
models/llama/: backup_llama.cc  ggml.cc  ggml.h  karpathy.cc  karpathy.h  llama.cc  llama.h  llama_cpu.h  llama_default.h  llama_vocab.h
tensor/: CMakeLists.txt
tensor/benchmark/: CMakeLists.txt  benchmark.h  binary.cc  gemm.cc
tensor/metal/: CMakeLists.txt
tensor/metal/kernels/: binary.metal  gemm.metal  unary.metal  utils.h
tensor/source/: CMakeLists.txt  instantiate.h  mmap.cc  tensor.cc
tensor/source/cuda/: .binary.cu.swo  .binary.cu.swp  .utils.h.swp  CMakeLists.txt  binary.cu  device.cc  matmul.cu  (+6 more)
tensor/unittest/: .tensor_base.cc.swp  .tensor_metal.cc.swp  CMakeLists.txt  addition.cc  addition.h  addition_base.cc  addition_cuda.cc  addition_metal.cc  addition_slowcpu.cc  multiplication.cc  multiplication.h  multiplication_base.cc  multiplication_cuda.cc  multiplication_metal.cc  multiplication_slowcpu.cc  rms_norm.cc  rms_norm.h  rms_norm_base.cc  rms_norm_cuda.cc  rms_norm_metal.cc  rms_norm_slowcpu.cc  rope.cc  silu.cc  softmax.cc  softmax.h  softmax_base.cc  softmax_metal.cc  tensor.cc  tensor.h  tensor_base.cc  tensor_base.h  tensor_cuda.cc  tensor_cuda.h  tensor_metal.cc  tensor_metal.h  tensor_parameters.cc  tensor_slowcpu.cc  tensor_slowcpu.h  unary.cc  unary.h  (+3 more)
tools/: CMakeLists.txt  cudatest.cu  llama.cc
util/source/: CMakeLists.txt  ioevent.cc  thread.cc  worker.cc
util/unittest/: benchmark.cc  worker.cc
(+118 files in other folders)
